--- a/index-fastopt.html
+++ b/index-fastopt.html
@@ -6,13 +6,8 @@
 </head>
 <body>
 
-<h1>Example Scala.js application - fast-optimized version</h1>
-
-<p>After having compiled and fast-optimized properly the code for the application
-(using `sbt fastOptJS`), you should see "It works" herebelow.
-See README.md for detailed explanations.</p>
-
-<div id="playground">
+<div id="playground" width="1000" height="600">
+  <canvas id="canvas" width="1000" height="600"></canvas>
 </div>
 
 <script type="text/javascript" src="./target/scala-2.11/example-fastopt.js"></script>
