added pause/unpause on space, some refactoring

--- a/index-fastopt.html
+++ b/index-fastopt.html
@@ -4,7 +4,7 @@
   <title>Example Scala.js application</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
-<body>
+<body style="background-color: black">
 
 <div id="playground" width="1000" height="600">
   <canvas id="canvas" width="1000" height="600"></canvas>
