added frame counter, rendering diffs

--- a/index-fastopt.html
+++ b/index-fastopt.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Example Scala.js application</title>
+  <title>Game of life in Scala.js</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body style="background-color: black">
 
 <div id="playground" width="1000" height="600">
   <canvas id="canvas" width="1000" height="600"></canvas>
+  <p id="instructions" style="color:white">press Space to <span style="color:white" id="spaceAction">pause</span></p>
+  <p id="frameCount" style="color:white">frame: </p>
 </div>
 
 <script type="text/javascript" src="./target/scala-2.11/example-fastopt.js"></script>
