--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Example Scala.js application</title>
+  <title>Game of life in Scala.js - optimized</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
-<body>
+<body style="background-color: black">
 
-<h1>Example Scala.js application - full-optimized version</h1>
-
-<p>After having compiled and full-optimized properly the code for the application
-(using `sbt fullOptJS`), you should see "It works" herebelow.
-See README.md for detailed explanations.</p>
-
-<div id="playground">
+<div id="playground" width="1000" height="600">
+  <canvas id="canvas" width="1000" height="600"></canvas>
+  <p id="instructions" style="color:white">press Space to <span style="color:white" id="spaceAction">pause</span></p>
+  <p id="frameCount" style="color:white">frame: </p>
 </div>
 
 <script type="text/javascript" src="./target/scala-2.11/example-opt.js"></script>
