added cell creation on mouseup

--- a/index-fastopt.html
+++ b/index-fastopt.html
@@ -9,6 +9,7 @@
 <div id="playground" width="1000" height="600">
   <canvas id="canvas" width="1000" height="600"></canvas>
   <p id="instructions" style="color:white">press Space to <span style="color:white" id="spaceAction">pause</span></p>
+  <p id="instructions2" style="color:white">click mouse to create cells</p>
   <p id="frameCount" style="color:white">frame: </p>
 </div>
 
