--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <div id="playground" width="1000" height="600">
   <canvas id="canvas" width="1000" height="600"></canvas>
   <p id="instructions" style="color:white">press Space to <span style="color:white" id="spaceAction">pause</span></p>
-  <p id="frameCount" style="color:white">frame: </p>
+  <p id="instructions2" style="color:white">click mouse to create cells</p>
+  <p id="frameCount" style="color:white"></p>
 </div>
 
 <script type="text/javascript" src="./target/scala-2.11/example-opt.js"></script>
